# Time_Series_Forcasting

./: interview_cheatsheet.md  requirements.txt  statistical_forecasting_interview_prep.md
.github/workflows/: main.yml
retail-sales-forecasting/: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Retail_Sales_Forecasting_Presentation.pptx  conftest.py  docker-compose.yml  generate_ppt.py  pyproject.toml  requirements.txt
retail-sales-forecasting/.github/workflows/: ci.yml
retail-sales-forecasting/src/: __init__.py  config.py  data_loader.py  evaluation.py  feature_engineering.py  forecasting.py  logger.py  preprocessing.py  utils.py  visualization.py
retail-sales-forecasting/src/models/: __init__.py  arima_model.py  lstm_model.py  prophet_model.py  trainer.py  xgboost_model.py
retail-sales-forecasting/streamlit_app/: Home.py
retail-sales-forecasting/streamlit_app/pages/: 1_EDA.py  2_Forecast.py  3_Model_Comparison.py  4_About.py
retail-sales-forecasting/tests/: test_features.py  test_metrics.py  test_models.py  test_preprocessing.py
