[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "retail-sales-forecasting"
version         = "1.0.0"
description     = "Production-quality retail sales forecasting with ARIMA, Prophet, XGBoost, and LSTM"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "MIT"}

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
    "xgboost>=2.0.0",
    "tensorflow>=2.13.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
]

[tool.black]
line-length    = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select      = ["E", "F", "W", "I"]
ignore      = ["E501"]

[tool.isort]
profile         = "black"
line_length     = 100

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
